--- a/assets/styles.css
+++ b/assets/styles.css
@@ -5,5 +5,6 @@ body, html {height: 100%}
   min-height: 100%;
   background-position: center fixed;
   background-size: cover;
+  background-origin: padding-box;
   
 }
