--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2,9 +2,12 @@ body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
   background-image: url('/images/airWaterShow.jpg') ;
-  min-height: 100%;
-  background-position: center fixed;
-  background-size: cover;
+  border: 10px solid #ffffff;
+  border-radius: 10px;
+  padding: 10px;
+  
+  max-width: 100%;
+  height: auto;
   opacity: 0.8;
   filter: grayscale(80%)
   
