--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,5 +1,12 @@
-body,h1 {font-family: "Raleway", sans-serif}
-body, html {height: 100%}
+
+body,
+html {
+  height: 100%
+}
+h1 {
+  font-family: "Raleway", sans-serif
+}
+
 .bgimg {
   background-image: url('/images/airWaterShow.jpg') ;
   min-height: 100%;
@@ -9,9 +16,9 @@ body, html {height: 100%}
 }
 
 div.w3-display-middle{
-  margin: 20px;
   background-color: #ffffff;
   opacity: 0.6;
+  width: 100%;
   height: 220px;
-  width:800px;
+  margin: 20px; 
 }
