--- a/assets/styles.css
+++ b/assets/styles.css
@@ -19,6 +19,6 @@ div.w3-display-middle{
   background-color: #ffffff;
   opacity: 0.6;
   width: 100%;
-  height: 220px;
+  max-height: 400px;
   margin: 20px; 
 }
